# keenOn-card-compose

./: .gitignore  Cargo.toml  Dockerfile  README.md  api-test.http  build.rs  docker-compose.yml  http-client.env.json  sample.env
docs/: implementation-guide.md
monitoring/grafana/dashboards/: keenon-card-compose-dashboard.json
monitoring/prometheus/: alert_rules.yml  prometheus.yml
nginx/conf.d/: default.conf
scripts/: backup-data.sh  generate-ssl-certs.sh  health-check.sh  restore-data.sh
src/: config.rs  main.rs
src/services/: image_service.rs
terraform/: main.tf  variables.tf
